WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315418
Fix fragment parsing of xmlns="" inheritance and annotation-xml encoding
https://bugs.webkit.org/show_bug.cgi?id=315418
Summary
Fix fragment parsing of xmlns="" inheritance and annotation-xml encoding
Anne van Kesteren
Reported
2026-05-23 04:21:35 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-05-23 04:27:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65531
EWS
Comment 2
2026-05-23 23:33:31 PDT
Committed
313803@main
(b9e630270a1d): <
https://commits.webkit.org/313803@main
> Reviewed commits have been landed. Closing PR #65531 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-23 23:34:13 PDT
<
rdar://problem/177808494
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug