Source/WebCore/html/parser/HTMLElementStack.cpp
@@ -278,13 +278,13 @@ bool HTMLElementStack::isMathMLTextIntegrationPoint(HTMLStackItem& item)
 bool HTMLElementStack::isHTMLIntegrationPoint(HTMLStackItem& item)
 {
     if (item.elementName() == MathML::annotation_xml) {
-        const Attribute* encodingAttr = item.findAttribute(MathMLNames::encodingAttr);
-        if (encodingAttr) {
-            const String& encoding = encodingAttr->value();
-            return equalLettersIgnoringASCIICase(encoding, "text/html"_s)
-                || equalLettersIgnoringASCIICase(encoding, "application/xhtml+xml"_s);
-        }
-        return false;
+        // Read encoding off the element directly: m_attributes is unset for fragment-context items.
+        RefPtr element = item.elementOrNull();
+        if (!element)
+            return false;
+        auto& encoding = element->attributeWithoutSynchronization(MathMLNames::encodingAttr);
+        return equalLettersIgnoringASCIICase(encoding, "text/html"_s)
+            || equalLettersIgnoringASCIICase(encoding, "application/xhtml+xml"_s);
     }
     return item.elementName() == SVG::foreignObject
         || item.elementName() == SVG::desc
